--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET_KEY=yvQY2xK2ogeP2duTJlhr291GtcddCe2M
-MONGO_DB_URI=mongodb+srv://winter:apple_pie@board.01nba.mongodb.net/board?retryWrites=true&w=majority
+MONGO_DB_URI=mongodb+srv://winter:r4TGEoLaNHEFfyJz@board.01nba.mongodb.net/board?retryWrites=true&w=majority
